// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewProjects renders major mines application tab properly 1`] = `
<div>
  <div
    class="fixed-tabs-container"
  >
    <h1
      class="ant-typography"
    >
      Applications
    </h1>
    <div
      class="ant-tabs ant-tabs-top ant-tabs-card"
    >
      <div
        class="ant-tabs-nav"
        role="tablist"
      >
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-list"
            style="transform: translate(0px, 0px);"
          >
            <div
              class="ant-tabs-tab ant-tabs-tab-active"
              data-node-key="major-mine-application"
            >
              <div
                aria-controls="rc-tabs-test-panel-major-mine-application"
                aria-selected="true"
                class="ant-tabs-tab-btn"
                id="rc-tabs-test-tab-major-mine-application"
                role="tab"
                tabindex="0"
              >
                Major Mine Applications
              </div>
            </div>
            <div
              class="ant-tabs-tab"
              data-node-key="notice-of-work"
            >
              <div
                aria-controls="rc-tabs-test-panel-notice-of-work"
                aria-selected="false"
                class="ant-tabs-tab-btn"
                id="rc-tabs-test-tab-notice-of-work"
                role="tab"
                tabindex="0"
              >
                Notice of Work Applications
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
        <div
          class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
        >
          <button
            aria-controls="rc-tabs-test-more-popup"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-hidden="true"
            class="ant-tabs-nav-more"
            id="rc-tabs-test-more"
            style="visibility: hidden; order: 1;"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="ellipsis"
              class="anticon anticon-ellipsis"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="ellipsis"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        class="ant-tabs-content-holder"
      >
        <div
          class="ant-tabs-content ant-tabs-content-top"
        >
          <div
            aria-hidden="false"
            aria-labelledby="rc-tabs-test-tab-major-mine-application"
            class="ant-tabs-tabpane ant-tabs-tabpane-active"
            id="rc-tabs-test-panel-major-mine-application"
            role="tabpanel"
            tabindex="0"
          >
            <div
              class="ant-row"
            >
              <div
                class="ant-col ant-col-24"
              >
                <h1
                  class="ant-typography"
                >
                  Major Mine Applications
                </h1>
                <div
                  class="ant-typography"
                >
                  A
                   
                  <span
                    class="ant-typography color-primary"
                  >
                    <strong>
                      Major Mine Application 
                    </strong>
                  </span>
                  is an application to the Chief Permitting Officer to authorize the construction and operation of a coal or mineral mine through a permit issued under the Mines Act.
                   
                </div>
                <div
                  class="ant-typography"
                >
                  If you are proposing induced polarization surveys or exploration drilling within the permit mine area of an operating production mineral or coal mine (
                  <a
                    href="https://www2.gov.bc.ca/assets/gov/farming-natural-resources-and-industry/mineral-exploration-mining/documents/health-and-safety/code-review/health_safety_and_reclamation_code_apr2021.pdf"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    HSRC
                  </a>
                   10.1.2), please submit a 
                  <a
                    href="https://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/permitting/mines-act-deemed-authorizations"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Notification of Deemed Authorization
                  </a>
                   application through 
                  <a
                    href="https://portal.nrs.gov.bc.ca/web/client/home"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    FrontCounter BC
                  </a>
                  .
                </div>
                <div
                  class="ant-typography"
                >
                  If you are proposing exploration work (
                  <a
                    href="https://www2.gov.bc.ca/assets/gov/farming-natural-resources-and-industry/mineral-exploration-mining/documents/health-and-safety/code-review/health_safety_and_reclamation_code_apr2021.pdf"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    HSRC
                  </a>
                   9.1.1) outside of the permit mine area of an operating production mineral or coal mine that does not consist of an expansion to the production mining area, please submit a Notice of Work application through
                   
                  <a
                    href="https://portal.nrs.gov.bc.ca/web/client/home"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    FrontCounter BC
                  </a>
                   to amend your MX or CX permit.
                </div>
                <div
                  class="ant-typography"
                >
                  If you are unsure how to proceed, please email the Major Mines Office at 
                  <a
                    href="mailto:permrecl@gov.bc.ca"
                  >
                    permrecl@gov.bc.ca
                  </a>
                   or contact the 
                  <a
                    href="https://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/permitting/mines-contact-info"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Regional Mines Office
                  </a>
                   closest to your project location.
                </div>
                <div
                  class="ant-typography"
                >
                  <span />
                </div>
                <div
                  class="ant-table-wrapper  core-table"
                >
                  <div
                    class="ant-spin-nested-loading"
                  >
                    <div>
                      <div
                        aria-busy="true"
                        aria-live="polite"
                        class="ant-spin ant-spin-spinning"
                      >
                        <span
                          class="ant-spin-dot ant-spin-dot-spin"
                        >
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      class="ant-spin-container ant-spin-blur"
                    >
                      <div
                        class="ant-table"
                      >
                        <div
                          class="ant-table-container"
                        >
                          <div
                            class="ant-table-content"
                          >
                            <table
                              style="table-layout: auto;"
                            >
                              <colgroup />
                              <thead
                                class="ant-table-thead"
                              >
                                <tr>
                                  <th
                                    aria-label="Project Title"
                                    class="ant-table-cell ant-table-column-has-sorters"
                                    tabindex="0"
                                  >
                                    <div
                                      class="ant-table-column-sorters"
                                    >
                                      <span
                                        class="ant-table-column-title"
                                      >
                                        Project Title
                                      </span>
                                      <span
                                        class="ant-table-column-sorter ant-table-column-sorter-full"
                                      >
                                        <span
                                          class="ant-table-column-sorter-inner"
                                        >
                                          <span
                                            aria-label="caret-up"
                                            class="anticon anticon-caret-up ant-table-column-sorter-up"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-up"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                          <span
                                            aria-label="caret-down"
                                            class="anticon anticon-caret-down ant-table-column-sorter-down"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-down"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                        </span>
                                      </span>
                                    </div>
                                  </th>
                                  <th
                                    aria-label="Project #"
                                    class="ant-table-cell ant-table-column-has-sorters"
                                    tabindex="0"
                                  >
                                    <div
                                      class="ant-table-column-sorters"
                                    >
                                      <span
                                        class="ant-table-column-title"
                                      >
                                        Project #
                                      </span>
                                      <span
                                        class="ant-table-column-sorter ant-table-column-sorter-full"
                                      >
                                        <span
                                          class="ant-table-column-sorter-inner"
                                        >
                                          <span
                                            aria-label="caret-up"
                                            class="anticon anticon-caret-up ant-table-column-sorter-up"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-up"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                          <span
                                            aria-label="caret-down"
                                            class="anticon anticon-caret-down ant-table-column-sorter-down"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-down"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                        </span>
                                      </span>
                                    </div>
                                  </th>
                                  <th
                                    aria-label="Contact"
                                    class="ant-table-cell ant-table-column-has-sorters"
                                    tabindex="0"
                                  >
                                    <div
                                      class="ant-table-column-sorters"
                                    >
                                      <span
                                        class="ant-table-column-title"
                                      >
                                        Contact
                                      </span>
                                      <span
                                        class="ant-table-column-sorter ant-table-column-sorter-full"
                                      >
                                        <span
                                          class="ant-table-column-sorter-inner"
                                        >
                                          <span
                                            aria-label="caret-up"
                                            class="anticon anticon-caret-up ant-table-column-sorter-up"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-up"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                          <span
                                            aria-label="caret-down"
                                            class="anticon anticon-caret-down ant-table-column-sorter-down"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-down"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                        </span>
                                      </span>
                                    </div>
                                  </th>
                                  <th
                                    aria-label="Last Updated"
                                    class="ant-table-cell ant-table-column-has-sorters"
                                    tabindex="0"
                                  >
                                    <div
                                      class="ant-table-column-sorters"
                                    >
                                      <span
                                        class="ant-table-column-title"
                                      >
                                        Last Updated
                                      </span>
                                      <span
                                        class="ant-table-column-sorter ant-table-column-sorter-full"
                                      >
                                        <span
                                          class="ant-table-column-sorter-inner"
                                        >
                                          <span
                                            aria-label="caret-up"
                                            class="anticon anticon-caret-up ant-table-column-sorter-up"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-up"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                          <span
                                            aria-label="caret-down"
                                            class="anticon anticon-caret-down ant-table-column-sorter-down"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-down"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                        </span>
                                      </span>
                                    </div>
                                  </th>
                                  <th
                                    aria-label="Updated By"
                                    class="ant-table-cell ant-table-column-has-sorters"
                                    tabindex="0"
                                  >
                                    <div
                                      class="ant-table-column-sorters"
                                    >
                                      <span
                                        class="ant-table-column-title"
                                      >
                                        Updated By
                                      </span>
                                      <span
                                        class="ant-table-column-sorter ant-table-column-sorter-full"
                                      >
                                        <span
                                          class="ant-table-column-sorter-inner"
                                        >
                                          <span
                                            aria-label="caret-up"
                                            class="anticon anticon-caret-up ant-table-column-sorter-up"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-up"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                          <span
                                            aria-label="caret-down"
                                            class="anticon anticon-caret-down ant-table-column-sorter-down"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-down"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                        </span>
                                      </span>
                                    </div>
                                  </th>
                                  <th
                                    class="ant-table-cell"
                                  >
                                    
                                  </th>
                                </tr>
                              </thead>
                              <tbody
                                class="ant-table-tbody"
                              >
                                <tr
                                  class="ant-table-row ant-table-row-level-0 fade-in"
                                  data-row-key="35633148-57f8-4967-be35-7f89abfbd02e"
                                >
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <div
                                      title="Project Name"
                                    >
                                      Test Project Title
                                    </div>
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <div
                                      title="Project #"
                                    >
                                      N/A
                                    </div>
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <div
                                      title="Contact"
                                    >
                                      N/A
                                    </div>
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <div
                                      title="Last Updated"
                                    />
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <div
                                      title="Last Updated By"
                                    />
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <div
                                      align="right"
                                      title=""
                                    >
                                      <div
                                        class="ant-row"
                                        style="margin-left: -0.5px; margin-right: -0.5px;"
                                      >
                                        <div
                                          class="ant-col ant-col-12"
                                          style="padding-left: 0.5px; padding-right: 0.5px;"
                                        >
                                          <a
                                            href="/projects/35633148-57f8-4967-be35-7f89abfbd02e/overview"
                                          >
                                            <img
                                              alt="Edit"
                                              src="[object Object]"
                                            />
                                          </a>
                                        </div>
                                      </div>
                                    </div>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewProjects renders now application tab properly 1`] = `
<div>
  <div
    class="fixed-tabs-container"
  >
    <h1
      class="ant-typography"
    >
      Applications
    </h1>
    <div
      class="ant-tabs ant-tabs-top ant-tabs-card"
    >
      <div
        class="ant-tabs-nav"
        role="tablist"
      >
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-list"
            style="transform: translate(0px, 0px);"
          >
            <div
              class="ant-tabs-tab"
              data-node-key="major-mine-application"
            >
              <div
                aria-controls="rc-tabs-test-panel-major-mine-application"
                aria-selected="false"
                class="ant-tabs-tab-btn"
                id="rc-tabs-test-tab-major-mine-application"
                role="tab"
                tabindex="0"
              >
                Major Mine Applications
              </div>
            </div>
            <div
              class="ant-tabs-tab ant-tabs-tab-active"
              data-node-key="notice-of-work"
            >
              <div
                aria-controls="rc-tabs-test-panel-notice-of-work"
                aria-selected="true"
                class="ant-tabs-tab-btn"
                id="rc-tabs-test-tab-notice-of-work"
                role="tab"
                tabindex="0"
              >
                Notice of Work Applications
              </div>
            </div>
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
          </div>
        </div>
        <div
          class="ant-tabs-nav-operations ant-tabs-nav-operations-hidden"
        >
          <button
            aria-controls="rc-tabs-test-more-popup"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-hidden="true"
            class="ant-tabs-nav-more"
            id="rc-tabs-test-more"
            style="visibility: hidden; order: 1;"
            tabindex="-1"
            type="button"
          >
            <span
              aria-label="ellipsis"
              class="anticon anticon-ellipsis"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="ellipsis"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        class="ant-tabs-content-holder"
      >
        <div
          class="ant-tabs-content ant-tabs-content-top"
        >
          <div
            aria-hidden="false"
            aria-labelledby="rc-tabs-test-tab-notice-of-work"
            class="ant-tabs-tabpane ant-tabs-tabpane-active"
            id="rc-tabs-test-panel-notice-of-work"
            role="tabpanel"
            tabindex="0"
          >
            <div
              class="ant-row"
            >
              <div
                class="ant-col ant-col-24"
              >
                <h1
                  class="ant-typography"
                >
                  Notice of Work Applications
                </h1>
                <div
                  class="ant-typography"
                >
                  A
                   
                  <span
                    class="ant-typography color-primary"
                  >
                    <strong>
                      Notice of Work Application(NOW) 
                    </strong>
                  </span>
                  is required to obtain a Mines Act permit for exploring and developing mineral, coal, placer, quarry, and aggregate resources in the province. This application applies to both new permits and amendments. For more details or to apply, visit
                   
                  <a
                    href="https://portal.nrs.gov.bc.ca/web/client/home"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    FrontCounter BC
                  </a>
                  .
                   
                </div>
                <div
                  class="ant-typography"
                >
                  Applications shown here were submitted through FrontCounter BC and cannot be edited in MineSpace. For assistance, please contact your regional office.
                </div>
                <div
                  class="ant-table-wrapper  core-table"
                >
                  <div
                    class="ant-spin-nested-loading"
                  >
                    <div>
                      <div
                        aria-busy="true"
                        aria-live="polite"
                        class="ant-spin ant-spin-spinning"
                      >
                        <span
                          class="ant-spin-dot ant-spin-dot-spin"
                        >
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                          <i
                            class="ant-spin-dot-item"
                          />
                        </span>
                      </div>
                    </div>
                    <div
                      class="ant-spin-container ant-spin-blur"
                    >
                      <div
                        class="ant-table"
                      >
                        <div
                          class="ant-table-container"
                        >
                          <div
                            class="ant-table-content"
                          >
                            <table
                              style="table-layout: auto;"
                            >
                              <colgroup />
                              <thead
                                class="ant-table-thead"
                              >
                                <tr>
                                  <th
                                    aria-label="Number"
                                    class="ant-table-cell ant-table-column-has-sorters"
                                    tabindex="0"
                                  >
                                    <div
                                      class="ant-table-column-sorters"
                                    >
                                      <span
                                        class="ant-table-column-title"
                                      >
                                        Number
                                      </span>
                                      <span
                                        class="ant-table-column-sorter ant-table-column-sorter-full"
                                      >
                                        <span
                                          class="ant-table-column-sorter-inner"
                                        >
                                          <span
                                            aria-label="caret-up"
                                            class="anticon anticon-caret-up ant-table-column-sorter-up"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-up"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                          <span
                                            aria-label="caret-down"
                                            class="anticon anticon-caret-down ant-table-column-sorter-down"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-down"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                        </span>
                                      </span>
                                    </div>
                                  </th>
                                  <th
                                    aria-label="Type"
                                    class="ant-table-cell ant-table-column-has-sorters"
                                    tabindex="0"
                                  >
                                    <div
                                      class="ant-table-column-sorters"
                                    >
                                      <span
                                        class="ant-table-column-title"
                                      >
                                        Type
                                      </span>
                                      <span
                                        class="ant-table-column-sorter ant-table-column-sorter-full"
                                      >
                                        <span
                                          class="ant-table-column-sorter-inner"
                                        >
                                          <span
                                            aria-label="caret-up"
                                            class="anticon anticon-caret-up ant-table-column-sorter-up"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-up"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                          <span
                                            aria-label="caret-down"
                                            class="anticon anticon-caret-down ant-table-column-sorter-down"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-down"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                        </span>
                                      </span>
                                    </div>
                                  </th>
                                  <th
                                    aria-label="Status"
                                    class="ant-table-cell ant-table-column-has-sorters"
                                    tabindex="0"
                                  >
                                    <div
                                      class="ant-table-column-sorters"
                                    >
                                      <span
                                        class="ant-table-column-title"
                                      >
                                        Status
                                      </span>
                                      <span
                                        class="ant-table-column-sorter ant-table-column-sorter-full"
                                      >
                                        <span
                                          class="ant-table-column-sorter-inner"
                                        >
                                          <span
                                            aria-label="caret-up"
                                            class="anticon anticon-caret-up ant-table-column-sorter-up"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-up"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                          <span
                                            aria-label="caret-down"
                                            class="anticon anticon-caret-down ant-table-column-sorter-down"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-down"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                        </span>
                                      </span>
                                    </div>
                                  </th>
                                  <th
                                    aria-sort="descending"
                                    class="ant-table-cell ant-table-column-sort ant-table-column-has-sorters"
                                    tabindex="0"
                                  >
                                    <div
                                      class="ant-table-column-sorters"
                                    >
                                      <span
                                        class="ant-table-column-title"
                                      >
                                        Received
                                      </span>
                                      <span
                                        class="ant-table-column-sorter ant-table-column-sorter-full"
                                      >
                                        <span
                                          class="ant-table-column-sorter-inner"
                                        >
                                          <span
                                            aria-label="caret-up"
                                            class="anticon anticon-caret-up ant-table-column-sorter-up"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-up"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                          <span
                                            aria-label="caret-down"
                                            class="anticon anticon-caret-down ant-table-column-sorter-down active"
                                            role="presentation"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              data-icon="caret-down"
                                              fill="currentColor"
                                              focusable="false"
                                              height="1em"
                                              viewBox="0 0 1024 1024"
                                              width="1em"
                                            >
                                              <path
                                                d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                              />
                                            </svg>
                                          </span>
                                        </span>
                                      </span>
                                    </div>
                                  </th>
                                  <th
                                    class="ant-table-cell"
                                  >
                                    Application
                                  </th>
                                  <th
                                    class="ant-table-cell"
                                  >
                                    
                                  </th>
                                </tr>
                              </thead>
                              <tbody
                                class="ant-table-tbody"
                              >
                                <tr
                                  class="ant-table-row ant-table-row-level-0 fade-in"
                                  data-row-key="07e801a0-fa33-4c3b-abcc-ac6df628d483"
                                >
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <div
                                      title="Number"
                                    >
                                      44
                                    </div>
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <div
                                      title="Type"
                                    >
                                      choice
                                    </div>
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <div
                                      title="Status"
                                    >
                                      <span
                                        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                                      >
                                        <span
                                          class="ant-badge-status-dot ant-badge-status-success"
                                        />
                                        <span
                                          class="ant-badge-status-text"
                                        >
                                          Approved
                                        </span>
                                      </span>
                                    </div>
                                  </td>
                                  <td
                                    class="ant-table-cell ant-table-column-sort"
                                  >
                                    <div
                                      title="Received"
                                    >
                                      Aug 14 2019
                                    </div>
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    N/A
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <div
                                      title=""
                                    >
                                      <div
                                        class="ant-row"
                                        style="margin-left: -0.5px; margin-right: -0.5px;"
                                      >
                                        <div
                                          class="ant-col ant-col-12"
                                          style="padding-left: 0.5px; padding-right: 0.5px;"
                                        >
                                          <a
                                            href="/#TODO"
                                          >
                                            View
                                          </a>
                                        </div>
                                      </div>
                                    </div>
                                  </td>
                                </tr>
                                <tr
                                  class="ant-table-row ant-table-row-level-0 fade-in"
                                  data-row-key="8e1536da-644c-4961-976b-b1326fa75825"
                                >
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <div
                                      title="Number"
                                    >
                                      52
                                    </div>
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <div
                                      title="Type"
                                    >
                                      technology
                                    </div>
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <div
                                      title="Status"
                                    >
                                      <span
                                        class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                                      >
                                        <span
                                          class="ant-badge-status-dot ant-badge-status-success"
                                        />
                                        <span
                                          class="ant-badge-status-text"
                                        >
                                          Approved
                                        </span>
                                      </span>
                                    </div>
                                  </td>
                                  <td
                                    class="ant-table-cell ant-table-column-sort"
                                  >
                                    <div
                                      title="Received"
                                    >
                                      Jul 21 2019
                                    </div>
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    N/A
                                  </td>
                                  <td
                                    class="ant-table-cell"
                                  >
                                    <div
                                      title=""
                                    >
                                      <div
                                        class="ant-row"
                                        style="margin-left: -0.5px; margin-right: -0.5px;"
                                      >
                                        <div
                                          class="ant-col ant-col-12"
                                          style="padding-left: 0.5px; padding-right: 0.5px;"
                                        >
                                          <a
                                            href="/#TODO"
                                          >
                                            View
                                          </a>
                                        </div>
                                      </div>
                                    </div>
                                  </td>
                                </tr>
                              </tbody>
                            </table>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
